Fix layout issues

--- a/public/styles/dev_tool_panel.css
+++ b/public/styles/dev_tool_panel.css
@@ -25,8 +25,9 @@ button {
   overflow: hidden;
   border: 1px solid #ccc;
   background-color: #f1f1f1;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   z-index: 1000;
   height: var(--navbar-height);
 
@@ -53,6 +54,7 @@ button {
   display: none;
   padding: 0.5em 1em;
   height: var(--available-content-height);
+  margin-top: var(--navbar-height);
 
   &.active {
     display: block;
@@ -122,24 +124,27 @@ svg.icon-dark {
   border-left: 3px solid var(--primary-color, #1976d2);
 }
 
-pre.html-preview {
-  max-width: 100%;
+.html-preview {
+  /* Seems random. Because it is. */
+  /* Otherwise the html preview from highlight.js may be cut off */
+  margin-bottom: 1em;
+  padding-bottom: 3rem;
   overflow-y: auto;
-  height: 3em;
-
-  /* Blur effect on the right side, to indicate scrollability */
+  max-width: 100%;
+}
+.html-preview pre {
   position: relative;
   mask-type: alpha;
+  padding-right: 25px;
   -webkit-mask-image: linear-gradient(to right, black 12px, black calc(100% - 25px), transparent calc(100% - 8px), transparent calc(100% - 8px) 100%);
   mask-image: linear-gradient(to right, black 12px, black calc(100% - 25px), transparent calc(100% - 8px), transparent calc(100% - 8px) 100%);
-  padding-right: 25px;
 }
 
 .pane-section-heading {
   font-weight: bold;
   font-size: 1.2em;
   margin-bottom: 0.5em;
-  padding: 0.5em 0;
+  padding: 0.5em;
   background-color: var(--light-color);
 }
 
@@ -171,19 +176,6 @@ pre.html-preview {
 .align-items-top {
   align-items: flex-start;
 }
-
-.cursor-pointer {
-  cursor: pointer;
-}
-
-.d-none {
-  display: none;
-}
-
-.d-flex {
-  display: flex;
-}
-
 .flex-column {
   flex-direction: column;
 }
@@ -192,8 +184,12 @@ pre.html-preview {
   justify-content: center;
 }
 
-.justify-content-between {
-  justify-content: space-between;
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.d-none {
+  display: none;
 }
 
 .button-as-link {
@@ -204,7 +200,7 @@ pre.html-preview {
 
 .scrollable-list {
   overflow-y: auto;
-  max-height: var(--available-content-height);
+  max-height: 100%;
 }
 
 .h-100 {
@@ -213,6 +209,10 @@ pre.html-preview {
 
 .h-100vh {
   height: 100vh;
+}
+
+.h-inherit {
+  height: inherit;
 }
 
 .visibility-hidden {
@@ -250,6 +250,10 @@ pre.html-preview {
 }
 .p-3 {
   padding: 1rem;
+}
+
+.mb-3 {
+  margin-bottom: 1rem;
 }
 
 .gap-0 {
